--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,13 +6,13 @@ en:
     honor: "Enterprice Honour"
     news_list1: "MORO Information"
     news_list2: "Community Socially Useful Activity"
-    products: "Product Exhibit"
+    products: "Products"
 
-    sale: "Chinese Market Distribution"
+    sale: "Sales Market"
     shoppingcenter: "Shopping Center In China"
     online: "Buy Goods online"
     
-    join: "Merchants join"
+    join: "Join us"
     join_doc: "招商政策"
     join_process: "招商流程"
     
