--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   base:
-    about: "About Monroe"
+    about: "About Us"
     intro: "Company Introduction"
     culture: "Enterprice Culture"
     credibility: "Credibility of Enterprise"
