--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,7 +19,7 @@ en:
     sale_sh: "China Shanghai Taobao shop"
     sale_yc: "China Yinchuan Taobao shop"
     
-    investment: "International Investment"
+    investment: "Investment"
     global_investment: "Global Investment"
     investment_process: "Investment Process"
     
