--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -24,8 +24,8 @@ zh:
     investment_process: "招商流程"
     
     service: "技术服务"
-    products_intro: "产品知识介绍"
-    guestbooks: "网络留言"
+    products_intro: "产品知识"
+    guestbooks: "客户留言"
     guestbook_new: "新留言"
     
     contact: "联系我们"
@@ -50,8 +50,8 @@ zh:
     investment: "国际招商"
     
     service: "技术服务"
-    products_intro: "产品知识介绍"
-    guestbooks: "网络留言"
+    products_intro: "产品知识"
+    guestbooks: "客户留言"
     guestbook_new: "新留言"
     
     contact: "联系我们"
