--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -9,6 +9,10 @@ zh:
     management: "管理体系"
     qualification: "企业资质"
     quality: "质量控制"
+    quality_a: "智能座便器流程图"
+    quality_b: "智能移动电源流程图"
+    quality_c: "质量控制"
+    quality_d: "质量控制"
     products: "产品展示"    
 
     sale: "营销网络"
@@ -45,6 +49,7 @@ zh:
     products_list: "产品列表"
     
     management: "管理体系"
+    quality: "质量控制"
     sale: "营销网络"    
     sale_civil: "国内市场"
     investment: "国际招商"
