--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,8 +9,8 @@ en:
     management: "Management System"
     qualification: "Qualification of Enterprise"
     quality: "Quality Control"
-    quality_a: "Intelligent Toilet Cover Flowchart"
-    quality_b: "Intelligent Integration Stool Flowchart"
+    quality_a: "Intelligent Toilet Cover Quality Process"
+    quality_b: "Intelligent Integration Stool Quality Process"
     quality_c: "质量控制"
     quality_d: "质量控制"
     products: "Products"
