--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -9,8 +9,8 @@ zh:
     management: "管理体系"
     qualification: "企业资质"
     quality: "质量控制"
-    quality_a: "智能座便器流程图"
-    quality_b: "智能移动电源流程图"
+    quality_a: "智能座便器质量流程"
+    quality_b: "智能移动电源质量流程"
     quality_c: "质量控制"
     quality_d: "质量控制"
     products: "产品展示"    
