--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,7 @@ en:
     news: "News"
     products: "Products"
     products_list: "List"
+    product_order: "Order Online"
     
     management: "Management System"
     quality: "Quality Control"
@@ -68,6 +69,24 @@ en:
     features: "Features"
     data: "Datasheets"
     no_pics: "No pictures yet."
+    
+    order_title: "Thank you for visiting \"MORO\" website. If you are satisfied with our products, you can fill in the order form order online. Thank you!"
+    order_succ: "Order succeed. We will contact you soon."
+    order_model: "Model"
+    order_num: "Number"
+    order_name: "Name"
+    order_role: "Gender"
+    order_male: "Male"
+    order_female: "Female"
+    order_position: "Position"
+    order_phone: "Tel"
+    order_fax: "Fax"
+    order_company: "Company"
+    order_email: "Email"
+    order_www: "WebSite"
+    order_addr: "Address"
+    order_note: "Note"
+    order_submit: "Submit"
   sales:
     china_branch_title: "Moro China Branches"
     china_branches: "Established Regional offices: Shanghai, Beijing, Guangzhou, Shenzhen, Shenyang, Xi'an, Yinchuan, Chengdu, Nanchang"
