--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -47,6 +47,7 @@ zh:
     news: "企业资讯"
     products: "产品展示"
     products_list: "产品列表"
+    product_order: "产品订购"
     
     management: "管理体系"
     quality: "质量控制"
@@ -68,6 +69,24 @@ zh:
     features: "功能特点"
     data: "说明书下载"
     no_pics: "暂无图片。"
+    
+    order_title: "感谢您浏览“梦露电气”网站，如果您对我们的产品很满意想订购的话，可以填写以下订货单进行在线订购，谢谢！"
+    order_succ: "订购成功，我们会在一周内联系您。"
+    order_model: "产品型号"
+    order_num: "定购数量"
+    order_name: "姓名"
+    order_role: "称呼"
+    order_male: "先生"
+    order_female: "女士"
+    order_position: "职位"
+    order_phone: "电话"
+    order_fax: "传真"
+    order_company: "公司名称"
+    order_email: "电子邮箱"
+    order_www: "公司网址"
+    order_addr: "联系地址"
+    order_note: "附言"
+    order_submit: "提 交"
   sales:
     china_branch_title: "梦露中国地区办事处"
     china_branches: "目前已设立的办事处地区有：上海、北京、广州、深圳、沈阳、西安、银川、成都、南昌"
