--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -94,6 +94,20 @@ zh:
     address: "地&nbsp;&nbsp;&nbsp;&nbsp;址"
     tel: "电&nbsp;&nbsp;&nbsp;&nbsp;话"
     online: "在线客服"
+  guestbook:
+    list: "留言列表"
+    new: "我要留言"
+    none: "还没有留言。"
+    no_name: "请填写您的称呼。"
+    no_content: "请填写内容。"
+    succ: "提交成功，请等待管理员审核。"
+    name: "您的大名"
+    tel: "电话"
+    email: "邮箱"
+    content: "留言内容"
+    submit: "确认提交"
+    t_name: "留言"
+    t_master: "网站管理员"
     
   will_paginate:
     previous_label: "上一页"
