--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -41,6 +41,8 @@ zh:
     mail: "官方邮箱"
     copyright: "版权所有 &copy; 2008-2013 梦露（中国）有限公司，保留所有权利。"
     hotline: "全国免费服务热线："
+    
+    kf_hid: "main_hid_cn.gif"
   location:
     index: "首页"
     about: "关于梦露"
