--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,6 +41,8 @@ en:
     mail: "Email"
     copyright: "Copyright &copy; 2008-2013 Moro(China) Ltd. All rights reserved."
     hotline: "Free Service Hotline: "
+    
+    kf_hid: "main_hid_en.gif"
   location:
     index: "Home"
     about: "About Us"
